[gd_scene load_steps=4 format=3 uid="uid://c6lbq358ecbm5"]

[ext_resource type="Script" path="res://scenes/game_over/game_over.gd" id="1_12y6p"]
[ext_resource type="LabelSettings" uid="uid://dm7b42pq1mkuj" path="res://assets/sh_48_red.tres" id="1_pchmi"]
[ext_resource type="AudioStream" uid="uid://dc3js73g7pbd" path="res://assets/audio/game_over.wav" id="3_rr4ys"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_12y6p")

[node name="GameOverLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
label_settings = ExtResource("1_pchmi")

[node name="SpaceLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "PRESS SPACE"
label_settings = ExtResource("1_pchmi")

[node name="RestartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_rr4ys")

[connection signal="timeout" from="RestartTimer" to="." method="_on_restart_timer_timeout"]
